[package]
authors = ["Alex Huszagh <ahuszagh@gmail.com>"]
categories = ["biology", "scientific", "proteomics", "genetics"]
keywords = ["biology", "scientific", "proteomics", "genetics", "uniprot", "database"]
license = "MIT"
name = "bdb"
readme = "README.md"
version = "0.1.0"

[badges]
maintenance = { status = "experimental" }

[features]
default = [
    # Format features.
    "csv", "fasta", "http", "text", "xml",
    # Datatype features.
    "uniprot", "mass_spectrometry", "pdb"
]

# TODO(ahuszagh)
#   Add hdf5 and sqlite

# Format features.
fasta = []
http = ["reqwest", "url"]
text = []
xml = ["quick-xml"]

# Datatype features.
uniprot = []
mass_spectrometry = []
pdb = []

[dependencies]
assert_approx_eq = "1"
digit_group = "0.1"
lazy_static = "1"
regex = "1"

csv = { version = "1", optional = true }
quick-xml = { version = "0.12", optional = true }
reqwest = { version = "0.9.2", optional = true }
url = { version = "1", optional = true }

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
