[package]
authors = ["Alex Huszagh <ahuszagh@gmail.com>"]
categories = ["parsing", "science"]
description = "Efficient APIs to parse from and export to file formats commonly used in biology, for both proteomics and genetics workflows."
keywords = ["biology", "scientific", "proteomics", "genetics"]
license = "MIT/Apache-2.0"
name = "bdb"
readme = "README.md"
repository = "https://github.com/AlexHuszagh/bdb"
version = "0.0.1"
exclude = [
    "test/data/*",
]

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "AlexHuszagh/bdb" }

[features]
default = [
    # Format features.
    "csv", "fasta", "fastq", "http", "text", "mgf", "xml",
    # Datatype features.
    "uniprot", "mass_spectrometry", "pdb", "sra"
]

# TODO(ahuszagh)
#   Add hdf5 and sqlite

# Format features.
fasta = []
fastq = []
http = ["reqwest", "url"]
mgf = []
text = []
xml = ["quick-xml"]

# Datatype features.
mass_spectrometry = []
pdb = []
sra = []
uniprot = []

[dependencies]
cfg-if = "0.1"
lazy_static = "1"
lexical = "1"
numpress = "1"
ref_slice = "1"
regex = "1"

csv = { version = "1", optional = true }
quick-xml = { version = "0.12", optional = true }
reqwest = { version = "0.9.2", optional = true }
url = { version = "1", optional = true }

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
assert_approx_eq = "1"
bencher = "0.1.5"

# Benchmarks

[[bench]]
name = "uniprot-complete"
path = "benches/uniprot/complete.rs"
harness = false

[[bench]]
name = "uniprot-csv"
path = "benches/uniprot/csv.rs"
harness = false

[[bench]]
name = "uniprot-fasta"
path = "benches/uniprot/fasta.rs"
harness = false

[[bench]]
name = "uniprot-re"
path = "benches/uniprot/re.rs"
harness = false

[[bench]]
name = "uniprot-valid"
path = "benches/uniprot/valid.rs"
harness = false

[[bench]]
name = "uniprot-xml"
path = "benches/uniprot/xml.rs"
harness = false
